Added the ability to send selected portions from TypeScript files.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -20,8 +20,8 @@
             "args": [
                 "${workspaceFolder}/bin/otojsc.js",
                 "--selection",
-                "${relativeFile}",
-                "${selectedText}"
+                "${relativeFile}:${lineNumber}:${columnNumber}",
+                "'${selectedText}'"
             ],
             "problemMatcher": []
         }
