Workaround for cases where the shell cannot be launched from a task after executing it many times (it's still unclear whether this is truly effective.)

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -11,7 +11,12 @@
             "options": {
                 "cwd": "${workspaceFolder}"
             },
-            "problemMatcher": []
+            "problemMatcher": [],
+            "presentation": {
+                "reveal": "silent",
+                "showReuseMessage": false,
+                "close": true
+            }
         },
         {
             "type": "shell",
@@ -23,7 +28,12 @@
                 "${relativeFile}:${lineNumber}:${columnNumber}",
                 "'${selectedText}'"
             ],
-            "problemMatcher": []
+            "problemMatcher": [],
+            "presentation": {
+                "reveal": "silent",
+                "showReuseMessage": false,
+                "close": true
+            }
         }
     ],
     "version": "2.0.0"
