--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,11 +9,6 @@
     "typeRoots": ["./types"],
     "sourceMap": true
   },
-  "include": [
-    "code/**/*"
-  ],
-  "exclude": [
-    "node_modules",
-    "dist"
-  ]
+  "include": ["code/**/*"],
+  "exclude": ["node_modules", "dist"]
 }
